kube-manifests/01-DEVOPS-Nginx-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ken42-aws-devops-deployment
  labels:
    app: ken42-aws-devops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ken42-aws-devops
  template:
    metadata:
      labels:
        app: ken42-aws-devops
    spec:
      containers:
        - name: ken42-aws-devops
          image: CONTAINER_IMAGE
          ports:
            - containerPort: 80
