kube-manifests/02-configuration-mc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configuration-microservice-deployment
  namespace: staging
  labels:
    app: configuration-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configuration-microservice
  template:
    metadata:
      labels:
        app: configuration-microservice
    spec:
      containers:
        - name: configuration-microservice
          image: 268117265615.dkr.ecr.ap-south-1.amazonaws.com/ken42:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: configuration-microservice-nodeport-service
  namespace: staging
  labels:
    app: configuration-microservice
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: alb
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /v1/
spec:
  type: NodePort
  selector:
    app: configuration-microservice
  ports:
    - port: 80
      targetPort: 3000
