kube-manifests/02-config-ingress.yaml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: config-ingress
  namespace: staging
  annotations:
    # Ingress Core Settings
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    ## SSL Settings
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:268117265615:certificate/67ed4b10-4855-40cf-bf61-9e0aab7284e2
    #alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01 #Optional (Picks default if not used)
    # SSL Redirect Setting
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  # ingressClassName: alb # Ingress Class
  defaultBackend:
    service:
      name: configuration-microservice-nodeport-service
      port:
        number: 80
  rules:
    - host: config-nasscom-demo.ken42.com
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: configuration-microservice-nodeport-service
                port:
                  number: 80                            
# Please note that in path-based routing, the order of rules is crucial. If using "/*" (root context), it is advisable to place it at the end of all the rules.
# Two important points to keep in mind:
# If "spec.ingressClassName: my-aws-ingress-class" is not specified, the default ingress class of the Kubernetes cluster will be used.
# The default ingress class is the one with the annotation ingressclass.kubernetes.io/is-default-class: "true".
